# Server-fix

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
config/: dev.toml  example.toml
config/systemd/: nx_proxy.service
corpus/packet/: dict.txt
crates/nx_bench/: Cargo.toml
crates/nx_bench/benches/: udp_fast_path.rs
crates/nx_bench/src/: lib.rs
crates/nx_fbs_guard/: Cargo.toml
crates/nx_fbs_guard/src/: codec.rs  config.rs  guard.rs  lib.rs  main.rs
crates/nx_fbs_guard/tests/: fbs_guard_integration.rs
crates/nx_fuzz/: Cargo.toml
crates/nx_fuzz/fuzz_targets/: fbs_guard_decoder.rs  frame_decoder.rs  udp_datagram_validator.rs  validator.rs
crates/nx_metrics/: Cargo.toml
crates/nx_metrics/src/: lib.rs
crates/nx_netio/: Cargo.toml
crates/nx_netio/src/: lib.rs
crates/nx_proxy/: Cargo.toml
crates/nx_proxy/src/: anomaly.rs  challenge.rs  config.rs  lane.rs  lib.rs  main.rs  mmr.rs  packet.rs  rate_limit.rs  server.rs
crates/nx_proxy/tests/: proxy_integration.rs
docs/: ARCHITECTURE.md  Build.md  CONTEXT.md  DEPLOYMENT.md  IntegrationGuide.md  Metrics.md  OUT_OF_SCOPE.md  OpsRunbook.md  REQUIREMENTS.md  TASKS.md  THREAT_MODEL.md  ThreatModel.md
docs/optional/rlbot/: README.md  rlbot_guard.env.example
guard/include/guard/: Amplification.h  Common.h  Enforcement.h  Guard.h  Metrics.h  Parser.h  ParserBudget.h  Precheck.h  QueueGuard.h  RateLimiter.h  RiskScorer.h  SandboxClient.h  Token.h  Util.h
guard/include/guard/crypto/: sha256.h
guard/src/: Amplification.cpp  Guard.cpp  Metrics.cpp  Parser.cpp  ParserBudget.cpp  Precheck.cpp  QueueGuard.cpp  RateLimiter.cpp  RiskScorer.cpp  SandboxClient.cpp  Token.cpp  Util.cpp
guard/src/crypto/: sha256.cpp
proxy/: quilkin-example.yaml
report/: DisclosureTemplate.md
sandbox/: README.md  worker_main.cpp
scripts/: eos_sweep.ps1
tests/fuzz/: CMakeLists.txt  fuzz_packet_end2end.cpp  fuzz_parser.cpp  fuzz_token.cpp
tests/property/: test_properties.cpp
tests/unit/: test_amplification.cpp  test_main.cpp  test_parser_budget.cpp  test_queue_guard.cpp  test_rate_limiter.cpp  test_risk.cpp  test_token.cpp
xdp/: README.md  guard_xdp.c
