[package]
name = "nx_bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nx_netio = { path = "../nx_netio", default-features = false, features = ["mmsg"] }
tokio.workspace = true
flume = { version = "0.11", default-features = false, features = ["async"] }

[[bench]]
name = "udp_fast_path"
harness = false
