[package]
name = "nx_bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
cuda_anomaly = ["nx_proxy/cuda_anomaly"]
cuda_anomaly_torch = ["cuda_anomaly", "nx_proxy/torch_anomaly"]

[dependencies]
nx_netio = { path = "../nx_netio", default-features = false, features = ["mmsg"] }
nx_proxy = { path = "../nx_proxy", default-features = false }
tokio.workspace = true
flume = { version = "0.11", default-features = false, features = ["async"] }

[[bench]]
name = "udp_fast_path"
harness = false
