[package]
name = "nx_proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

autobins = false

[lib]
name = "nx_proxy"
path = "src/lib.rs"

[[bin]]
name = "nx_proxy"
path = "src/main.rs"

[[bin]]
name = "nx_echo_upstream"
path = "src/bin/nx_echo_upstream.rs"

[[bin]]
name = "nx_flood_sim"
path = "src/bin/nx_flood_sim.rs"

[[bin]]
name = "nx_packet_manip_sim"
path = "src/bin/nx_packet_manip_sim.rs"

[[bin]]
name = "nx_rl_sim"
path = "src/bin/nx_rl_sim.rs"

[[bin]]
name = "nx_eos_sim"
path = "src/bin/nx_eos_sim.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["torch_train_backend"]
bench = false

[features]
default = ["netio_mmsg"]
netio_mmsg = ["nx_netio/mmsg"]
torch_train_backend = []
torch_anomaly = ["dep:tch", "tch/doc-only"]
torch_train = ["dep:tch", "tch/doc-only", "torch_train_backend"]
torch_train_full = ["dep:tch", "torch_train_backend"]
cuda_anomaly = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }
flume = { version = "0.11", default-features = false, features = ["async"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
toml = "0.8"
tokio-util = "0.7"
socket2 = { version = "0.5", features = ["all"] }
libc.workspace = true
nx_metrics = { path = "../nx_metrics" }
nx_netio = { path = "../nx_netio", default-features = false }
tch = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3.15"
